force-app/main/default/objects/Integration_Log__b/Integration_Log__b.object-meta.xml
<CustomObject>
    <indexes>
        <fullName>Integration_Log_Index</fullName>
        <fields>
            <name>Integration_Name__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Event_Date__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>Correlation_Id__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>Integration Log Index</label>
    </indexes>
    <label>Integration Log</label>
    <pluralLabel>Integration Logs</pluralLabel>
</CustomObject>