force-app/main/default/objects/Integration_Log__b/fields/Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_Ms__c</fullName>
    <description>Duração da chamada de integração, em milissegundos.</description>
    <label>Duration (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>