force-app/main/default/objects/Integration_Log__b/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Código de erro reportado pelo sistema externo ou pela integração, quando houver falha.</description>
    <label>Error Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>