force-app/main/default/objects/Integration_Log__b/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Mensagem de erro completa reportada pelo sistema externo ou pela integração, quando houver falha.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>