force-app/main/default/objects/Integration_Log__b/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Instante do evento, em UTC. Segundo campo do índice do Big Object.</description>
    <label>Event Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>