force-app/main/default/objects/Integration_Log__b/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Nome de API do objeto Salesforce afetado pela integração.</description>
    <label>Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>