force-app/main/default/objects/Integration_Log__b/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Operação executada pela integração (ex.: Create, Update, Sync, Cancel).</description>
    <label>Operation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>