force-app/main/default/objects/Integration_Log__b/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Id do registro Salesforce afetado pela integração.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>