force-app/main/default/objects/Integration_Log__b/fields/Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>Response_Payload__c</fullName>
    <description>Corpo da resposta recebida do sistema externo.</description>
    <label>Response Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>