force-app/main/default/objects/Integration_Log__b/fields/Retry_Status__c.field-meta.xml
<CustomField>
    <fullName>Retry_Status__c</fullName>
    <description>Situação da tentativa de retry desta operação, em texto (ex.: Pending, Exhausted, Not_Applicable).</description>
    <label>Retry Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>