force-app/main/default/objects/Integration_Log__b/fields/Running_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Running_User_Id__c</fullName>
    <description>Id do usuário sob o qual a integração foi executada.</description>
    <label>Running User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>