force-app/main/default/objects/Integration_Log__b/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Resultado da tentativa de integração, em texto (Success, Failure, Retrying, Skipped). Sem picklist porque Big Object não suporta.</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>